# doorlockd-ansible-config

./: README.md  ansible.cfg  inventory.yaml  playbook.yaml
files/: authorized_keys  bbb-gpio-bias-fix.dts  doorlockd-backend.service  doorlockd-backend.socket  doorlockd-client.service  doorlockd_backend.production_settings.py  heater-control.service  lock-client-config.ini  nginx-vhost  rockpi-s-enable-uart2.dts  rockpi-s-enable-uart3.dts  rockpi-s-si7021-i2c1.dts
files/client-config/: lock-d2.ini  lock-main-entrance.ini  lock-parking.ini
files/client-config/inc/: common.ini
files/heater-control/: app.py  config.py.template  heater-control.py  pyproject.toml
